<resources>
    <string name="app_name">MyFitnessTracker</string>
    <string name="facebook_app_id">1102127206825629</string>
    <string name="fb_login_protocol_scheme">fb1102127206825629</string>
    <string name="c_weight">Enter your current weight(Kg)</string>
    <string name="c_height">Enter your height(cm)</string>
    <string name="c_age">Enter your age</string>
    <string name="c_gender">Select your gender</string>
    <string name="c_activity">How active are you?(in week)</string>
    <string name="c_goals">Goals</string>
    <string name="c_food">Food preferences</string>

    <string name="tag_male">Male</string>
    <string name="tag_female">Female</string>
    <string name="tag_other">Others</string>

    <string name="tag_sedentory">Sedentary</string>
    <string name="tag_light">Exercise 1–2 days</string>
    <string name="tag_moderate">Exercise 3–5 days</string>
    <string name="tag_heavy">Exercise 6–7 days</string>

    <string name="tag_fat_loss">Fat Loss</string>
    <string name="tag_muscle_gain">Muscle Gain</string>

    <string name="tag_veg">Vegetarian</string>
    <string name="tag_nonveg">Non vegetarian</string>
    <string name="expandable_card_view_image_content_description">Arrow to expand card</string>
    <string name="expandable_card_view_icon_content_description">Card icon</string>

    <string name="tag_egg">Eggetarian</string>
    <string name="tag_both">Both</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="api_key_food">QF9qUeCLGCcn1NkCTEgNGXaKxQ1QA6QdageJqYKi</string>


    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">676573042257-e5rlpf7jjn39gq8q49s90v1ohsrl3dqk.apps.googleusercontent.com</string>



</resources>
