<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bg_light_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <activity.ActionBar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_marginRight="-2dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@+id/submit"
        android:layout_below="@+id/action_bar"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/twenty_five_dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/app_color"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_height="wrap_content"
                android:text="@string/c_weight"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:textColor="@color/black"
                android:hint="Ex 75"
                android:id="@+id/et_weight"
                style="@style/EditTextDefault"
                />
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/app_color"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_height="wrap_content"
                android:text="@string/c_height"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:textColor="@color/black"
                android:id="@+id/et_height"
                android:hint="Ex 180"
                style="@style/EditTextDefault"
                />
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/app_color"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_height="wrap_content"
                android:text="@string/c_age"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/black"
                android:id="@+id/et_age"
                android:hint="Ex 25"
                style="@style/EditTextDefault"
                />

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/app_color"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_height="wrap_content"
                android:text="@string/c_gender"
                />
            <helper.TagLayout
                android:id="@+id/tl_gender"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/twelve_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp" />
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/app_color"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:text="@string/c_activity"
                />
            <helper.TagLayout
                android:id="@+id/tl_activity"
                android:layout_marginLeft="@dimen/twelve_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp" />
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/app_color"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginLeft="@dimen/fifteen_dp"
                android:layout_marginRight="@dimen/fifteen_dp"
                android:layout_height="wrap_content"
                android:text="@string/c_food"
                />
            <helper.TagLayout
                android:id="@+id/tl_food"
                android:layout_marginLeft="@dimen/twelve_dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/fifty_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp" />

        </LinearLayout>

    </ScrollView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:layout_marginLeft="@dimen/thirty_dp"
        android:layout_marginRight="@dimen/thirty_dp"
        android:layout_marginBottom="@dimen/thirty_dp"
        android:background="@color/app_color"
        android:textColor="@color/white"
        android:text="Submit"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>